--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         </div>
       </div>
     </div>
+      <div class="attribution">
+      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a></p>
+      <p>Coded by Nethania Pingka</p>
+    </div>
   </div>
 </body>
 </html>
