--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="profileCard/images/favicon-32x32.png">
 
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,15 +17,15 @@
   <div class="main">
     <div class="card">
       <div class="circles">
-        <img class="circle1" src="/images/bg-pattern-top.svg" alt="">
-        <img class="circle2" src="/images/bg-pattern-bottom.svg" alt="">
+        <img class="circle1" src="profileCard/images/bg-pattern-top.svg" alt="">
+        <img class="circle2" src="profileCard/images/bg-pattern-bottom.svg" alt="">
       </div>
       <div class="card-top">
-        <img src="/images/bg-pattern-card.svg" alt="Victor Crest" width="100%">
+        <img src="profileCard/images/bg-pattern-card.svg" alt="Victor Crest" width="100%">
       </div>
       <div class="card-message">
         <div class="img-container">
-          <img src="/images/image-victor.jpg" alt="Victor Crest">
+          <img src="profileCard/images/image-victor.jpg" alt="Victor Crest">
         </div>
         <h1 class="name">Victor Crest <span class="age">26</span></h1>
         <h2 class="city">London</h2><hr>
